@@ -1,3 +1,13 @@
+2012-12-04  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r136509.
+        http://trac.webkit.org/changeset/136509
+        https://bugs.webkit.org/show_bug.cgi?id=104015
+
+        broke layout tests (Requested by eae on #webkit).
+
+        * platform/efl-wk2/TestExpectations:
+
 2012-12-04  Antoine Quint  <graouts@apple.com>
 
         INVALID_STATE_ERR error upon calling .addCue() for an already-in-use cue
